--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Inicio</a> 
+                    <a class="nav-link active" aria-current="page" href="">InicioCAMBIO</a> 
                   </li>
                   <li class="nav-item">
                     <a class="nav-link " href="./pages/component.html">Servicios</a>  
@@ -108,29 +108,29 @@
             <div class="card" style="width: 15rem; height: 24rem p-2 g-col-6">
                 <img src="./assets/rrrrrosa.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h6 class="card-text">Postresin</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h6 class="card-text">Café del Sol</h6>
+                    <p class="card-text">Cafetería con ambiente acogedor y delicioso café.</p>
                 </div>
             </div>
             <div class="card" style="width: 15rem; height: 24rem p-2 g-col-6">
                 <img src="./assets/fruit.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h6 class="card-text">Postresin</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h6 class="card-text">Panadería del Pueblo</h6>
+                    <p class="card-text">Panadería artesanal con pasteles y café frescos.</p>
                 </div>
             </div>
             <div class="card" style="width: 15rem; height: 24rem p-2 g-col-6">
                 <img src="./assets/violet.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h6 class="card-text">Postresin</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h6 class="card-text">El Cafetal</h6>
+                    <p class="card-text">Cafetería con variedad de cafés y postres caseros.</p>
                 </div>
             </div>
             <div class="card" style="width: 15rem; height: 24rem p-2 g-col-6">
                 <img src="./assets/yellow.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h6 class="card-text">Postresin</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h6 class="card-text">Café de la Plaza</h6>
+                    <p class="card-text">Cafetería con vistas a la plaza y excelente café.</p>
                 </div>
             </div>
         </div>
