--- a/pages/component.html
+++ b/pages/component.html
@@ -98,7 +98,7 @@
           <div class="card bg-dark p-2 text-white">
             <img src="../assets/magic.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Magic _ 9.3</h5>
+              <h5 class="card-title">Magic - 9.3</h5>
               <p class="card-text text-white">Las frutas de deus. Amazing!</p>
             </div>
           </div>
