--- a/pages/component.html
+++ b/pages/component.html
@@ -90,7 +90,7 @@
             <img src="../assets/lima.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">The Limon - 5.2</h5>
-              <p class="card-text text-white">Acido, lugar Palermitano.</p>
+              <p class="card-text text-white">Acido, lugar muy bonito Palermitano.</p>
             </div>
           </div>
         </div>
