--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <a class="nav-link " href="./pages/component.html">Servicios</a>  
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Destacados</a>
+                    <a class="nav-link" href="./pages/destacados.html">Destacados</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Lanzamienotos</a>
+                    <a class="nav-link" href="#">Lanzamientos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Nosotros</a>
