--- a/pages/component.html
+++ b/pages/component.html
@@ -28,10 +28,10 @@
                     <a class="nav-link active" href="#">Servicios</a>  
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Destacados</a>
+                    <a class="nav-link" href="./destacados.html">Destacados</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Lanzamienotos</a>
+                    <a class="nav-link" href="#">Lanzamientos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Nosotros</a>
