--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <a class="nav-link" href="./pages/destacados.html">Destacados</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Lanzamientos</a>
+                    <a class="nav-link" href="./pages/Lanzamientos.html">Lanzamientos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros</a>
+                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                   </li>
                 </ul>
 
@@ -170,7 +170,7 @@
         <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
                 <div class="col-md-4 bg-danger-subtle">
-                    <img src="./assets/logopicnic.png" class="img-fluid rounded-start imgfoot" alt="...">
+                    <img src="./assets/logopicnic.png" class="img-fluid rounded-start imgfoot" alt="..." style="width: 200px; height: auto;">
             </div>
             <div class="col-md-8">
                 <div class="card-body bg-danger-subtle">
