--- a/pages/component.html
+++ b/pages/component.html
@@ -31,10 +31,10 @@
                     <a class="nav-link" href="./destacados.html">Destacados</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Lanzamientos</a>
+                    <a class="nav-link" href="./Lanzamientos.html">Lanzamientos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros</a>
+                    <a class="nav-link" href="./nosotros.html">Nosotros</a>
                   </li>
                 </ul>
 
@@ -51,8 +51,8 @@
 
 
 
-    <main class="bg-success">
-      <div class="card mb-3 bg-success p-2 text-white" style="max-width: 100%">
+    <main class=>
+      <div class="card mb-3 p-2 text-balck" style="max-width: 100%">
         <div class="row gap-0">
           <div class="col-md-4 order-md-last">
             <img src="../assets/parejita.png" class="img-fluid rounded-start" alt="...">
@@ -60,7 +60,7 @@
           <div class="col-md-4 offset-md-2">
             <div class="card-body text-md-start">
               <h1 class="card-title titulomainserv">Hagamos <b class="text-danger">PICNIC</b> en cualquier parte! </h1>
-              <p class="card-text text-white">Ofrecemos una amplia variedad de opciones de menús y platos para todos los gustos. Desde opciones vegetarianas y veganas, hasta platos de carne y mariscos,nuestros clientes pueden encontrar el plato perfecto para satisfacer sus antojos.</p>
+              <p class="card-text text-balck">Ofrecemos una amplia variedad de opciones de menús y platos para todos los gustos. Desde opciones vegetarianas y veganas, hasta platos de carne y mariscos,nuestros clientes pueden encontrar el plato perfecto para satisfacer sus antojos.</p>
               <button type="button" class="btn btn-danger btn-lg">¿Donde como?</button>
               <button type="button" class="btn btn-dark btn-lg">¿Qué como?</button>
             </div>
@@ -68,10 +68,10 @@
         </div>
       </div>
 
-      <div class="card bg-success">
+      <div class="card">
         <div class="card-body"> 
             <h6 class="text-center text-danger fw-bold">AQUI ESTÁN, ESTOS SON</h6>
-            <h2 class="text-center text-white fw-bold">¡Los destacados Picnesianos!</h2>
+            <h2 class="text-center text-black fw-bold">¡Los elegidos Picnesianos!</h2>
         </div>
     </div>
 
@@ -151,15 +151,15 @@
 
 
 
-      <div class="card mb-3 bg-success p-2 text-white p-8" style="max-width: 100%">
+      <div class="card mb-3 p-2 text-white p-8" style="max-width: 100%">
         <div class="row gap-0">
           <div class="col-md-4 offset-md-2">
             <img src="../assets/rama.png" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-4 order-md-last">
             <div class="card-body text-md-start">
-              <h1 class="card-title titulomainserv"><b class="text-danger">Catering</b> para eventos especiales</h1>
-              <p class="card-text text-white">Si necesitas un servicio de catering para un evento especial, nuestra página web de comida es la solución perfecta. Ofrecemos una amplia variedad de opciones de catering, desde buffets hasta menús personalizados para eventos corporativos, bodas y fiestas.</p>
+              <h1 class="card-title text-black"><b class="text-danger">Catering</b> para eventos especiales</h1>
+              <p class="card-text text-black">Si necesitas un servicio de catering para un evento especial, nuestra página web de comida es la solución perfecta. Ofrecemos una amplia variedad de opciones de catering, desde buffets hasta menús personalizados para eventos corporativos, bodas y fiestas.</p>
               <button type="button" class="btn btn-danger btn-lg">Reservar</button>
             </div>
           </div>
@@ -173,7 +173,7 @@
       <div class="card mb-3" style="max-width: 100%;">
           <div class="row g-0">
               <div class="col-md-4 bg-danger-subtle">
-                  <img src="../assets/logopicnic.png" class="img-fluid rounded-start imgfoot" alt="...">
+                  <img src="../assets/logopicnic.png" class="img-fluid rounded-start imgfoot" alt="..." style="width: 200px; height: auto;">
           </div>
           <div class="col-md-8">
             <div class="card-body bg-danger-subtle">
