--- a/pages/destacados.html
+++ b/pages/destacados.html
@@ -72,15 +72,18 @@
         </section>
         <section class="carduno-main"> 
           <img src="../assets/destcarduno.png" alt="">
+          <h5>Destacado 1</h5>
           <p>¿Ya estás listo para elegir tus destacados de la semana?</p>
         </section>
         <section class="carddos-main"> 
-          <img src="../assets/destcarduno.png" alt="">
+          <img src="../assets/aaaaaaaaaads.png" alt="">
+          <h5>Destacado 2</h5>
           <p>¿Ya estás listo para elegir tus destacados de la semana?</p>
         </section>
         <section class="cardtres-main"> 
-          <img src="../assets/destcarduno.png" alt="">
-          <p>¿Ya estás listo para elegir tus destacados de la semana?</p>
+          <img src="../assets/assasa.png" alt="">
+          <h5>Destacado 3</h5>
+          <p>¿Ya estás listo para elegir tus destacados de la semana?</p>>
         </section>
         <section class="cierre-main"> 
           <h3>Ahora es tu turno de destacar tus lugares</h3>
