--- a/pages/Lanzamientos.html
+++ b/pages/Lanzamientos.html
@@ -72,7 +72,7 @@
       <div class="degradesushi">
         </div>
         <div class="card" style="background: linear-gradient(to right, #F8E2D7, #B39BC4);">
-          <div class="card-body d-flex p-80">
+          <div class="card-body d-flex justify-content-center text-center">
             <h1 class="card-title titulomainserv"><h1 class="text-black">Deléitate con el sabor del <br>
               mar en cada bocado</h1>
           </div>
@@ -117,7 +117,15 @@
           </div>
         </div>
 
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="degradesushi marginsuhi">
+        </div>
+        <div class="card" style="background: linear-gradient(to right, #F8E2D7, #B39BC4);">
+          <div class="card-body d-flex justify-content-center">
+            <h1 class="card-title titulomainserv"><h1 class="text-black">El lanzamiento semanal</h1>
+          </div>
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-1">
           <div class="col">
             <div class="card">
               <img src="../assets/alauno.png" class="card-img-top" alt="...">
