proyecto final con sass

--- a/index.html
+++ b/index.html
@@ -4,49 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <meta name="description" content="Bienvenido a nuestra guía de restaurantes. Encuentra opciones para cada ocasión y presupuesto, desde restaurantes informales hasta elegantes. Reserva tu mesa en línea en segundos. ¡Comienza a explorar!">
+    <title>Picnic</title>
+    <link rel="shortcut icon" href="./assets/logopn.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
-          
+        <nav class="navbar navbar-expand-lg">          
             <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html"><img src="./assets/logopicnic.png" alt=""></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="./index.html"><img src="./assets/logopicnic.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-              </button>
+            </button>
 
 
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
+                    <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="">Inicio</a> 
-                  </li>
-                  <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link " href="./pages/component.html">Servicios</a>  
-                  </li>
-                  <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="./pages/destacados.html">Destacados</a>
-                  </li>
-                  <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="./pages/Lanzamientos.html">Lanzamientos</a>
-                  </li>
-                  <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
-                  </li>
+                    </li>
                 </ul>
 
 
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-secondary" type="submit">Search</button>
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-secondary" type="submit">Search</button>
                 </form>
-              </div>
+            </div>
 
             </div>
-          </nav>
+        </nav>
     </header>
 
 
@@ -97,7 +98,7 @@
 
 
 
-        <div class="card">
+        <div class="card fondomain">
             <div class="card-body"> 
                 <h2 class="text-center fw-bold">¡Los preferidos de la semana!</h2>
             </div>
@@ -105,30 +106,30 @@
 
 
         <div class="d-flex justify-content-center row cards-container grid gap-5">
-            <div class="card" style="width: 15rem; height: 24rem p-2 g-col-6">
+            <div class="card fondocard" style="width: 15rem; height: 24rem p-2 g-col-6">
                 <img src="./assets/rrrrrosa.png" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body cartas">
                     <h6 class="card-text">Café del Sol</h6>
                     <p class="card-text">Cafetería con ambiente acogedor y delicioso café.</p>
                 </div>
             </div>
-            <div class="card" style="width: 15rem; height: 24rem p-2 g-col-6">
+            <div class="card fondocard" style="width: 15rem; height: 24rem p-2 g-col-6">
                 <img src="./assets/fruit.png" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body cartas">
                     <h6 class="card-text">Panadería del Pueblo</h6>
                     <p class="card-text">Panadería artesanal con pasteles y café frescos.</p>
                 </div>
             </div>
-            <div class="card" style="width: 15rem; height: 24rem p-2 g-col-6">
+            <div class="card fondocard" style="width: 15rem; height: 24rem p-2 g-col-6">
                 <img src="./assets/violet.png" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body cartas">
                     <h6 class="card-text">El Cafetal</h6>
                     <p class="card-text">Cafetería con variedad de cafés y postres caseros.</p>
                 </div>
             </div>
-            <div class="card" style="width: 15rem; height: 24rem p-2 g-col-6">
+            <div class="card fondocard" style="width: 15rem; height: 24rem p-2 g-col-6">
                 <img src="./assets/yellow.png" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body cartas">
                     <h6 class="card-text">Café de la Plaza</h6>
                     <p class="card-text">Cafetería con vistas a la plaza y excelente café.</p>
                 </div>
@@ -136,49 +137,39 @@
         </div>
 
         <div class="card mb-3" style="max-width: 100%;">
-            <div class="row g-5">
+            <div class="row g-5 ">
                 <div class="col-md-6">
                 <img src="./assets/koood .png" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-5">
+                </div>
+        <div class="col-md-5">
                 <div class="card-body">
                     <h2 class="card-title experiencia">Una experiencia culinaria al alcance de tus dedos</h5>  
                     <p>Comer en Buenos Aires es sinónimo de <b>placer</b></p>                  
                 </div>
-            </div>
-            </div>
+        </div>        
         </div>
-
-        <div class="card mb-3">
-        </div>
-        <div class="card">
+        <div class="card fondomain">
             <div class="card-body centrado">
                 <h2 class="card-title">¿Querés conocer los mejores lugares para comer en Buenos Aires?</h2>
-                <p class="card-textlast">¡Bienvenidos a PicNic!</p>
+                <p class="card-textlast cartas">¡Bienvenidos a PicNic!</p>
             </div>
             <img src="./assets/end.png" class="card-img-bottom" alt="...">
         </div>
-
-    </main>
-
-
-
-
-
+    </main> 
 
     <footer>
         <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
-                <div class="col-md-4 bg-danger-subtle">
-                    <img src="./assets/logopicnic.png" class="img-fluid rounded-start imgfoot" alt="..." style="width: 200px; height: auto;">
+                <div class="col-md-4 fondo-footer">
+                    <img src="../assets/logopicnic.png" class="img-fluid rounded-start imgfoot" alt="..." style="width: 200px; height: auto;">
             </div>
             <div class="col-md-8">
-                <div class="card-body bg-danger-subtle">
-                    <h3 class="card-title">PicNic</h3>
+                <div class="card-body fondo-footer">
+                    <h5 class="card-title">PicNic</h5>
                     <p class="card-text">Sabores auténticos, experiencias inolvidables</p>
                     <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                 </div>
-            </div>
+                </div>
             </div>
         </div>
     </footer>  
