--- a/pages/Lanzamientos.html
+++ b/pages/Lanzamientos.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios</title>
+    <meta name="description" content="Descubre los mejores restaurantes de la ciudad con nuestra guía gastronómica. Encuentra opciones para cada gusto, presupuesto y ocasión. Reserva tu mesa en línea y disfruta de una experiencia culinaria única. ¡Comienza a explorar!">
+    <title>Lanzamientos  |  Picnic</title>
+    <link rel="shortcut icon" href="../assets/logopn.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -52,7 +54,7 @@
 
 
     <main>
-      <div class="card mb-3 p-2 p-8" style="max-width: 100%">
+      <div class="card mb-3 p-2 p-8 fondomain" style="max-width: 100%">
         <div class="row gap-0">
           <div class="col-md-4 offset-md-2">
             <img src="../assets/lanz.png" class="img-fluid mx-auto" alt="Imagen">
@@ -77,7 +79,7 @@
               mar en cada bocado</h1>
           </div>
         </div>
-        <div class="card mb-3 p-2 p-8" style="max-width: 100%">
+        <div class="card mb-3 p-2 p-8 fondomain" style="max-width: 100%">
           <div class="row gap-0">
             <div class="col-md-4 offset-md-2">
               <img src="../assets/mmmm.png" class="img-fluid mx-auto" alt="Imagen">
@@ -129,19 +131,22 @@
           <div class="col">
             <div class="card">
               <img src="../assets/alauno.png" class="card-img-top" alt="...">
+              <h5 class="text-center m-2">Sushi Love  |  Pieza Nagasaki</h5>
             </div>
           </div>
           <div class="col">
             <div class="card">
               <img src="../assets/alados.png" class="card-img-top" alt="...">
+              <h5 class="text-center m-2">Sushi Love  |  Pieza Nigiri</h5>
             </div>
           </div>
           <div class="col">
             <div class="card">
               <img src="../assets/alatres.png" class="card-img-top" alt="...">
+              <h5 class="text-center m-2">Sushi Love  |  Pieza New York</h5>
             </div>
           </div>
-          <div class="card mb-3" style="width: 100%;">
+          <div class="card mb-3 fondomain" style="width: 100%;">
             <div class="card-body">
               <h1 class="card-title text-center">Inscribite a PICNIC</h1>
               <p class="card-text text-center">Cada vez somos más amantes del buen comer, no te quedes afuera!</p>
@@ -158,11 +163,11 @@
     <footer>
       <div class="card mb-3" style="max-width: 100%;">
           <div class="row g-0">
-              <div class="col-md-4 bg-danger-subtle">
+              <div class="col-md-4 fondo-footer">
                   <img src="../assets/logopicnic.png" class="img-fluid rounded-start imgfoot" alt="..." style="width: 200px; height: auto;">
           </div>
           <div class="col-md-8">
-            <div class="card-body bg-danger-subtle">
+            <div class="card-body fondo-footer">
                 <h5 class="card-title">PicNic</h5>
                 <p class="card-text">Sabores auténticos, experiencias inolvidables</p>
                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
@@ -170,10 +175,7 @@
         </div>
         </div>
       </div>
-      
-
-
-  </footer>           
+    </footer>             
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>  
 </body>
