--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios</title>
+    <meta name="description" content="¿Quieres una experiencia gastronómica única? Nuestra página web te lleva a los mejores restaurantes de la ciudad, desde sabores locales hasta cocina internacional. ¡Descubre los mejores lugares para comer hoy">
+    <title>Nosotros  |  Picnic</title>
+    <link rel="shortcut icon" href="../assets/logopn.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -48,32 +50,32 @@
             </div>
           </nav>
     </header>
-
-
-
-    <main class="dest-container">
-      <section class="grid-dest">
-        <section class="titulo-dest"> 
-          <p>La experiencia gastronómica definitiva</p>
-          <h1>Acerca de nosotros</h1>
-          <p>Nuestra misión es compartir nuestras experiencias culinarias con nuestros lectores y ayudarles a descubrir los mejores lugares para comer,desde restaurantes gourmet hasta pequeños locales ocultos. Queremos ser su guía gastronómica personal y asegurarnos de que cada bocado que prueben sea una experiencia memorable.</p>
-        </section>
-        <section class="image-verde"> 
-          <img src="../assets/verde.png" alt="Imagen">
-        </section>
-        <section class="frase-dest"> 
-          <h3>"La comida no es solo una necesidad, es una pasión. Descubrir nuevos sabores y experiencias culinarias es lo que me mueve"</h3>
-        </section>
-        <section class="image-destdos"> 
-          <img src="../assets/huevo.png" alt="Imagen">
-        </section>
-        <section class="team-dest"> 
-          <h1>El Equipo</h1>
-          <p>Somos un equipo de trabajo formado por cuatro amigos que comparten una pasión por la comida. Nos encanta probar nuevos platillos y descubrir restaurantes únicos, y queremos compartir nuestras experiencias con el mundo a través de nuestro blog de comida. Juntos, nos aseguramos de que nuestro contenido sea de alta calidad y llegue a nuestro público de la mejor manera posible.</p>
-        </section>
-        <section class="image-fin"> 
-          <img src="../assets/fin.png" alt="Imagen">
-        </section>
+    
+    <main>
+      <section class="dest-container">
+        <section class="grid-dest">
+          <section class="titulo-dest"> 
+            <p>La experiencia gastronómica definitiva</p> 
+            <h1><strong>Acerca de nosotros</strong></h1>
+            <p>Nuestra misión es compartir nuestras experiencias culinarias con nuestros lectores y ayudarles a descubrir los mejores lugares para comer,desde restaurantes gourmet hasta pequeños locales ocultos. Queremos ser su guía gastronómica personal y asegurarnos de que cada bocado que prueben sea una experiencia memorable.</p>
+          </section>
+          <section class="image-verde"> 
+            <img src="../assets/verde.png" alt="Imagen">
+          </section>
+          <section class="frase-dest"> 
+            <h3><strong>"La comida no es solo una necesidad, es una pasión. Descubrir nuevos sabores y experiencias culinarias es lo que me mueve"</strong></h3>
+          </section>
+          <section class="image-destdos"> 
+            <img src="../assets/huevo.png" alt="Imagen">
+          </section>
+          <section class="team-dest"> 
+            <h1>El Equipo</h1>
+            <p>Somos un equipo de trabajo formado por cuatro amigos que comparten una pasión por la comida. Nos encanta probar nuevos platillos y descubrir restaurantes únicos, y queremos compartir nuestras experiencias con el mundo a través de nuestro blog de comida. Juntos, nos aseguramos de que nuestro contenido sea de alta calidad y llegue a nuestro público de la mejor manera posible.</p>
+          </section>
+          <section class="image-fin"> 
+            <img src="../assets/fin.png" alt="Imagen">
+          </section>
+      </section>      
     </main>
 
     
@@ -82,11 +84,11 @@
     <footer>
       <div class="card mb-3" style="max-width: 100%;">
           <div class="row g-0">
-              <div class="col-md-4 bg-danger-subtle">
+              <div class="col-md-4 fondo-footer">
                   <img src="../assets/logopicnic.png" class="img-fluid rounded-start imgfoot" alt="..." style="width: 200px; height: auto;">
           </div>
           <div class="col-md-8">
-            <div class="card-body bg-danger-subtle">
+            <div class="card-body fondo-footer">
                 <h5 class="card-title">PicNic</h5>
                 <p class="card-text">Sabores auténticos, experiencias inolvidables</p>
                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
@@ -94,7 +96,7 @@
         </div>
         </div>
       </div>
-  </footer>           
+    </footer>           
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>  
 </body>
