proyecto con sass incluido

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
                 <div class="col-md-4 fondo-footer">
-                    <img src="../assets/logopicnic.png" class="img-fluid rounded-start imgfoot" alt="..." style="width: 200px; height: auto;">
+                    <img src="./assets/logopicnic.png" class="img-fluid rounded-start imgfoot" alt="..." style="width: 200px; height: auto;">
             </div>
             <div class="col-md-8">
                 <div class="card-body fondo-footer">
