--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bienvenido a nuestra guía de restaurantes. Encuentra opciones para cada ocasión y presupuesto, desde restaurantes informales hasta elegantes. Reserva tu mesa en línea en segundos. ¡Comienza a explorar!">
     <title>Picnic</title>
-    <link rel="shortcut icon" href="./assets/logopn.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/logoparaweb.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">    
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header>
+    <header class="poppins-header">
         <nav class="navbar navbar-expand-lg">          
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html"><img src="./assets/logopicnic.png" alt=""></a>
@@ -41,11 +44,9 @@
 
 
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-secondary" type="submit">Search</button>
-                </form>
-            </div>
-
+                    <input class="form-control me-2" type="search" placeholder="A comer..." aria-label="Search">
+                    <button class="btn btn-outline-secondary" type="submit">Buscar</button>
+                </form>               
             </div>
         </nav>
     </header>
@@ -53,7 +54,7 @@
 
 
 
-    <main>
+    <main class="borde no-horizontal-scroll ">
         <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
