--- a/pages/Lanzamientos.html
+++ b/pages/Lanzamientos.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Descubre los mejores restaurantes de la ciudad con nuestra guía gastronómica. Encuentra opciones para cada gusto, presupuesto y ocasión. Reserva tu mesa en línea y disfruta de una experiencia culinaria única. ¡Comienza a explorar!">
     <title>Lanzamientos  |  Picnic</title>
-    <link rel="shortcut icon" href="../assets/logopn.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/logoparaweb.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
+    <header class="poppins-header">
         <nav class="navbar navbar-expand-lg bg-body-warning ">
           
             <div class="container-fluid">
@@ -42,9 +42,9 @@
 
 
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-secondary" type="submit">Search</button>
-                </form>
+                  <input class="form-control me-2" type="search" placeholder="A comer..." aria-label="Search">
+                  <button class="btn btn-outline-secondary" type="submit">Buscar</button>
+              </form>
               </div>
 
             </div>
@@ -53,8 +53,8 @@
 
 
 
-    <main>
-      <div class="card mb-3 p-2 p-8 fondomain" style="max-width: 100%">
+    <main class="borde no-horizontal-scroll">
+      <div class="card mb-3 p-2 p-8 fondomain">
         <div class="row gap-0">
           <div class="col-md-4 offset-md-2">
             <img src="../assets/lanz.png" class="img-fluid mx-auto" alt="Imagen">
