--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="¿Quieres una experiencia gastronómica única? Nuestra página web te lleva a los mejores restaurantes de la ciudad, desde sabores locales hasta cocina internacional. ¡Descubre los mejores lugares para comer hoy">
     <title>Nosotros  |  Picnic</title>
-    <link rel="shortcut icon" href="../assets/logopn.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/logoparaweb.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="w-100">
+    <header class="w-100 poppins-header">
         <nav class="navbar navbar-expand-lg bg-body-warning ">
           
             <div class="container-fluid">
@@ -42,9 +42,9 @@
 
 
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-secondary" type="submit">Search</button>
-                </form>
+                  <input class="form-control me-2" type="search" placeholder="A comer..." aria-label="Search">
+                  <button class="btn btn-outline-secondary" type="submit">Buscar</button>
+              </form>
               </div>
 
             </div>
