--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -55,9 +55,9 @@
       <section class="dest-container">
         <section class="grid-dest">
           <section class="titulo-dest"> 
-            <p>La experiencia gastronómica definitiva</p> 
+            <h4>La experiencia gastronómica definitiva</h4> 
             <h1><strong>Acerca de nosotros</strong></h1>
-            <p>Nuestra misión es compartir nuestras experiencias culinarias con nuestros lectores y ayudarles a descubrir los mejores lugares para comer,desde restaurantes gourmet hasta pequeños locales ocultos. Queremos ser su guía gastronómica personal y asegurarnos de que cada bocado que prueben sea una experiencia memorable.</p>
+            <h6>Nuestra misión es compartir nuestras experiencias culinarias con nuestros lectores y ayudarles a descubrir los mejores lugares para comer,desde restaurantes gourmet hasta pequeños locales ocultos. Queremos ser su guía gastronómica personal y asegurarnos de que cada bocado que prueben sea una experiencia memorable.</p>
           </section>
           <section class="image-verde"> 
             <img src="../assets/verde.png" alt="Imagen">
@@ -70,7 +70,7 @@
           </section>
           <section class="team-dest"> 
             <h1>El Equipo</h1>
-            <p>Somos un equipo de trabajo formado por cuatro amigos que comparten una pasión por la comida. Nos encanta probar nuevos platillos y descubrir restaurantes únicos, y queremos compartir nuestras experiencias con el mundo a través de nuestro blog de comida. Juntos, nos aseguramos de que nuestro contenido sea de alta calidad y llegue a nuestro público de la mejor manera posible.</p>
+            <h6>Somos un equipo de trabajo formado por cuatro amigos que comparten una pasión por la comida. Nos encanta probar nuevos platillos y descubrir restaurantes únicos, y queremos compartir nuestras experiencias con el mundo a través de nuestro blog de comida. Juntos, nos aseguramos de que nuestro contenido sea de alta calidad y llegue a nuestro público de la mejor manera posible.</h6>
           </section>
           <section class="image-fin"> 
             <img src="../assets/fin.png" alt="Imagen">
