--- a/index.html
+++ b/index.html
@@ -51,111 +51,116 @@
         </nav>
     </header>
 
-
-
-
-    <main class="borde no-horizontal-scroll ">
-        <div id="carouselExampleCaptions" class="carousel slide">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./assets/fotouno.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block titulo">
-                    <h4>Sabores auténticos, <br>
-                        experiencias inolvidables</h4> 
-                    <button type="button" class="btn btn-secondary btn-lg">¿Donde morfo?</button>
+    <main class="borde no-horizontal-scroll">
+        <div class="carousel-container">
+            <div id="carouselExampleCaptions" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
-            </div>
-                <div class="carousel-item">
-                    <img src="./assets/fotodos.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h4>Sabores auténticos, <br>
-                        experiencias inolvidables</h4> 
-                    <button type="button" class="btn btn-secondary btn-lg">¿Donde morfo?</button>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./assets/fotouno.png" class="d-block carousel-image" alt="...">
+                        <div class="carousel-caption d-none d-md-block titulo">
+                            <h4>Sabores auténticos, <br>
+                                experiencias inolvidables</h4>
+                            <button type="button" class="btn btn-dark btn-lg">¿Dónde morfo en Aires?</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/fotodos.png" class="d-block carousel-image" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h4>Sabores auténticos, <br>
+                                experiencias inolvidables</h4>
+                            <button type="button" class="btn btn-dark btn-lg">¿Dónde morfo en Aires?</button> 
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/fototres.png" class="d-block carousel-image" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h4>Sabores auténticos, <br>
+                                experiencias inolvidables</h4>
+                            <button type="button" class="btn btn-dark btn-lg">¿Dónde morfo en Aires?</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <img src="./assets/fototres.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h4>Sabores auténticos, <br>
-                        experiencias inolvidables</h4>                    
-                    <button type="button" class="btn btn-secondary btn-lg">¿Donde morfo?</button>
-                </div>
-            </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>      
-
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>   
+            
+        </div>
+        
 
 
         <div class="card fondomain">
             <div class="card-body"> 
-                <h2 class="text-center fw-bold">¡Los preferidos de la semana!</h2>
+                <h1 class="text-center fw-bold">¡Los preferidos de la semana!</h1>
             </div>
         </div>
 
 
-        <div class="d-flex justify-content-center row cards-container grid gap-5">
-            <div class="card fondocard" style="width: 15rem; height: 24rem p-2 g-col-6">
+        <div class="d-flex justify-content-center row cards-container grid gap-y-md-8">
+            <div class="card fondocard" style="width: 20rem; height: 24rem">
                 <img src="./assets/rrrrrosa.png" class="card-img-top" alt="...">
                 <div class="card-body cartas">
-                    <h6 class="card-text">Café del Sol</h6>
+                    <h5 class="card-text">Café del Sol</h5>
                     <p class="card-text">Cafetería con ambiente acogedor y delicioso café.</p>
                 </div>
             </div>
-            <div class="card fondocard" style="width: 15rem; height: 24rem p-2 g-col-6">
+            <div class="card fondocard" style="width: 20rem; height: 24rem p-2 g-col-6">
                 <img src="./assets/fruit.png" class="card-img-top" alt="...">
                 <div class="card-body cartas">
-                    <h6 class="card-text">Panadería del Pueblo</h6>
+                    <h5 class="card-text">Panadería del Pueblo</h5>
                     <p class="card-text">Panadería artesanal con pasteles y café frescos.</p>
                 </div>
             </div>
-            <div class="card fondocard" style="width: 15rem; height: 24rem p-2 g-col-6">
+            <div class="card fondocard" style="width: 20rem; height: 24rem p-2 g-col-6">
                 <img src="./assets/violet.png" class="card-img-top" alt="...">
                 <div class="card-body cartas">
-                    <h6 class="card-text">El Cafetal</h6>
+                    <h5 class="card-text">El Cafetal</h5>
                     <p class="card-text">Cafetería con variedad de cafés y postres caseros.</p>
                 </div>
             </div>
-            <div class="card fondocard" style="width: 15rem; height: 24rem p-2 g-col-6">
+            <div class="card fondocard" style="width: 20rem; height: 24rem p-2 g-col-6">
                 <img src="./assets/yellow.png" class="card-img-top" alt="...">
                 <div class="card-body cartas">
-                    <h6 class="card-text">Café de la Plaza</h6>
+                    <h5 class="card-text">Café de la Plaza</h5>
                     <p class="card-text">Cafetería con vistas a la plaza y excelente café.</p>
                 </div>
             </div>
         </div>
 
-        <div class="card mb-3" style="max-width: 100%;">
-            <div class="row g-5 ">
-                <div class="col-md-6">
-                <img src="./assets/koood .png" class="img-fluid rounded-start" alt="...">
-                </div>
-        <div class="col-md-5">
-                <div class="card-body">
-                    <h2 class="card-title experiencia">Una experiencia culinaria al alcance de tus dedos</h5>  
-                    <p>Comer en Buenos Aires es sinónimo de <b>placer</b></p>                  
-                </div>
-        </div>        
-        </div>
-        <div class="card fondomain">
-            <div class="card-body centrado">
-                <h2 class="card-title">¿Querés conocer los mejores lugares para comer en Buenos Aires?</h2>
-                <p class="card-textlast cartas">¡Bienvenidos a PicNic!</p>
+        <div class="image-container">
+            <div class="image-item">
+                <img src="./assets/zandeux.jpg" alt="Imagen 1" />
+            <div class="image-overlay">
+                <h2 class="image-title">Saludable</h2>
             </div>
-            <img src="./assets/end.png" class="card-img-bottom" alt="...">
+            </div>
+            <div class="image-item">
+                <img src="./assets/monteoliviaaa.jpg" alt="Imagen 2" />
+            <div class="image-overlay">
+                <h2 class="image-title">Bajonero</h2>
+            </div>
+            </div>
+        </div>                
         </div>
+        <div class="card box">
+            <div class="card-body centrado">
+                <h2 class="box-title">¿Querés conocer los mejores lugares para comer en Buenos Aires?</h2>
+                <h4 class="box-description">¡Bienvenidos a PicNic!</h4>
+                <div class="box-image"></div>
+            </div>
+        </div>
+
+
     </main> 
 
     <footer>
