--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
 
         <div class="card fondomain">
-            <div class="card-body"> 
-                <h1 class="text-center fw-bold">¡Los preferidos de la semana!</h1>
+            <div class="card-body nico"> 
+                <h1 class="text-center fw-bold  nico">¡Los preferidos de la semana!</h1>
             </div>
         </div>
 
